--- a/styles/less/main.less
+++ b/styles/less/main.less
@@ -1,3 +1,11 @@
 @import 'homepage.less';
 @import 'logs.less';
-@import 'login-popup';
+@import 'login-popup.less';
+@import 'about.less';
+@import 'forms.less';
+@import 'permissions.less';
+@import 'lock.less';
+@import 'mobile.less';
+@import 'guide.less';
+@import 'access-lock.less';
+@import 'my-account.less';
