--- a/styles/less/logs.less
+++ b/styles/less/logs.less
@@ -1,6 +1,77 @@
 #logContent{
-	font-size:11px;
-	margin: 0 auto;
-	width: 85%;
+	font-size: 13px;
+    margin: 0 auto;
+    width: 80%;
+    padding: 20px;
+    margin-bottom: 30px;
+    height: 100vh;
+    overflow-y: auto;
 
+	span{
+	    font-weight: bold;
+	    margin: 0 5px;
+	}
+
+	li{
+		padding: 8px;
+
+		&:nth-child(even) {
+		    background: #aedd94;
+		}
+	}
+
+}
+
+
+.loader{
+	margin: 20px auto;
+	text-align: center;
+}
+
+#mainLogs{
+
+	h2{
+		text-align:center;
+		margin: 10px;
+	}
+
+	
+	#logsImage{
+	   	background: url(../../images/hexagons.png) no-repeat 50%;
+	   	width: 100%;
+	   	height: 150px;
+	   	margin: 0 auto;
+	}
+	
+
+	form#lockSelector{
+		margin: 15px auto;
+		text-align: center;
+		display: inline-block;
+		select{
+			height: 37px;
+    		margin: 10px;	
+		}
+		button{
+			border: 1px solid;
+			padding: 10px;
+		}
+	}
+
+	#reset{
+		border: 1px solid;
+		padding: 10px;
+		display: inline;
+	}
+
+	#filter{
+		text-align: center;
+	}	
+}
+
+/* hi-res laptops and desktops */ 
+@media only screen and (min-width:1281px) { 
+	#logContent{
+		width: 50%;
+	}
 }
